# Lumin

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  install.sh  package-lock.json  package.json  requirements.txt  run.sh  setup.py
.github/workflows/: rust.yml
assets/: config.toml
benches/: get_desktop_app.rs  get_desktop_apps.rs  get_files.rs  get_macos_apps.rs
docs/: setup.md
src/: app_perf.rs  config.rs  constants.rs  lib.rs  log.rs  main.rs  message.rs  module.rs  modules.rs  shader.wgsl  sorting.rs  util.rs  widglets.rs
src/apps/: desktop_entry.rs  mac_apps.rs  mod.rs
src/calculator/: math.pest  mod.rs
src/drun/: mod.rs
src/files/: mod.rs
src/lumin/: globals.py  main.py  query.py
src/lumin/fastlog/: logger.py
src/lumin/gui/: gtk_main.py
src/lumin/gui/themes/: default.scss  mocha.scss  variables.scss
src/lumin/models/: result.py  sort.c  sort.pyx
src/lumin/modules/app_launcher/: common.py  desktop-entry-notes.md  desktop_entry.py  linux_desktop_entry.py  linux_desktop_icons.py  macos_search.py  main.py  models.py
src/lumin/modules/app_launcher/tests/: test_linux_desktop_entry.py
src/lumin/modules/calc/: main.py  qalc.pxd  qalc.pyx
src/lumin/modules/calc/tests/: test_qalc.py
src/lumin/modules/dictionary/: download_dict.py  main.py
src/lumin/types/: result.py
src/serworse/: mod.rs
src/websearch/: bits.rs  dictionary.rs  mod.rs  wikipedia.rs
src/widglets/: list.rs  mod.rs
