[package]
name = "lumin"
version = "0.1.0"
edition = "2024"
path = "src/"

[lints.clippy]
unwrap_used = "deny"

[[bin]]
name = "lumin"
path = "src/main.rs"

[features]
perf = []
time-travel = ["iced/time-travel"]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]


[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "tokio", "image"] }
anyhow = "1.0.99"
libc = "0.2.175"
log = "0.4.28"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.23", features = ["json"] }
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["full"]}
walkdir = "2.5.0"
serde = {version = "1.0.225", features = ["derive"]}
serde_json = "1.0.145"
icns = "0.3.1"
icon = "0.1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "get_desktop_apps"
harness = false

[[bench]]
name = "get_macos_apps"
harness = false
